adding font-awesome and about session

--- a/about.html
+++ b/about.html
@@ -3,8 +3,48 @@ layout: default
 title: About
 ---
 
-<div class="content container">
-  <code>
-    TODO :)
-  </code>
+<div id="about">
+  <h1>About me</h1>
+  <div id="quotation">
+    <img src="http://www.gravatar.com/avatar/82bc2f965db7e87993538fa822bbcfac?s=80" alt="Tiago Amaro">
+
+    <blockquote>
+      Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
+      <br>
+      <small><cite>Martin Fowler</cite></small>
+    </blockquote>
+  </div>
+
+  <div id="description">
+    Hi, my name is Tiago Amaro, and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">ruby</span> and my favorite developing environment is SublimeText 3 (With <span class="dev">Vintage</span> package enabled :D).
+  </div>
+
+  <div id="links">
+    <h2>Where to find me:</h2>
+    <ul>
+      <li>
+        <a href="https://github.com/tiagoamaro">
+          <i class="icon-github icon-large"></i>
+          Github
+        </a>
+      </li>
+      <li>
+        <a href="http://gist.github.com/tiagoamaro">
+          <i class="icon-github-alt icon-large"></i>
+          Gists
+        </a>
+      </li>
+      <li>
+        <a href="http://twitter.com/tiagocis">
+          <i class="icon-twitter icon-large"></i>
+          Twitter
+        </a>
+      </li>
+      <li>
+        <a href="https://plus.google.com/114988746507715114984">
+          <i class="icon-google-plus-sign icon-large">Google+</i>
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
