fixin about me links styling

--- a/about.html
+++ b/about.html
@@ -42,7 +42,8 @@ title: About
       </li>
       <li>
         <a href="https://plus.google.com/114988746507715114984">
-          <i class="icon-google-plus-sign icon-large">Google+</i>
+          <i class="icon-google-plus-sign icon-large"></i>
+          Google+
         </a>
       </li>
     </ul>
