changing to font-awesome 4.0 icons and adding instagram

--- a/about.html
+++ b/about.html
@@ -24,26 +24,32 @@ title: About
     <ul>
       <li>
         <a href="https://github.com/tiagoamaro">
-          <i class="icon-github icon-large"></i>
+          <i class="fa fa-github fa-lg"></i>
           Github
         </a>
       </li>
       <li>
         <a href="http://gist.github.com/tiagoamaro">
-          <i class="icon-github-alt icon-large"></i>
+          <i class="fa fa-github-alt fa fa-lg"></i>
           Gists
         </a>
       </li>
       <li>
         <a href="http://twitter.com/tiagocis">
-          <i class="icon-twitter icon-large"></i>
+          <i class="fa fa-twitter fa-lg"></i>
           Twitter
         </a>
       </li>
       <li>
         <a href="https://plus.google.com/114988746507715114984">
-          <i class="icon-google-plus-sign icon-large"></i>
+          <i class="fa fa-google-plus-square fa-lg"></i>
           Google+
+        </a>
+      </li>
+      <li>
+        <a href="http://instagram.com/tiagoamaro">
+          <i class="fa fa-instagram fa-lg"></i>
+          Instagram
         </a>
       </li>
     </ul>
