adding email to about

--- a/about.html
+++ b/about.html
@@ -23,6 +23,12 @@ title: About
     <h2>Where to find me:</h2>
     <ul>
       <li>
+        <span>
+          <i class="fa fa-envelope fa-lg"></i>
+          tiagocis at gmail dot com
+        </span>
+      </li>
+      <li>
         <a href="https://github.com/tiagoamaro">
           <i class="fa fa-github fa-lg"></i>
           Github
