Removing gists and google+ references from about page

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ title: About
   </div>
 
   <div id="description">
-    Hi, my name is Tiago Amaro, and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">ruby</span> and my favorite developing environment is SublimeText 3.
+    Hi, my name is Tiago Amaro, and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
   </div>
 
   <div id="links">
@@ -35,21 +35,9 @@ title: About
         </a>
       </li>
       <li>
-        <a href="http://gist.github.com/tiagoamaro">
-          <i class="fa fa-github-alt fa fa-lg"></i>
-          Gists
-        </a>
-      </li>
-      <li>
         <a href="http://twitter.com/tiagocis">
           <i class="fa fa-twitter fa-lg"></i>
           Twitter
-        </a>
-      </li>
-      <li>
-        <a href="https://plus.google.com/114988746507715114984">
-          <i class="fa fa-google-plus-square fa-lg"></i>
-          Google+
         </a>
       </li>
       <li>
