--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ title: About
   </div>
 
   <div id="description">
-    Hi, my name is Tiago Amaro, and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
+    Hi, my name is Tiago Amaro and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
   </div>
 
   <div id="links">
