Creating robots.txt

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>404! Oh mah gah!</title>
+  <title>404! Oh mah gah! D=</title>
   <style type="text/css">
     @-moz-keyframes roll {
       100% {
