Updating to Hyde 2.1.0 (writing new theme and writing some custom css)

--- a/about.html
+++ b/about.html
@@ -1,51 +1,41 @@
 ---
-layout: default
+layout: page
 title: About
 ---
 
-<div id="about">
-  <h1>About me</h1>
-  <div id="quotation">
-    <img src="http://www.gravatar.com/avatar/82bc2f965db7e87993538fa822bbcfac?s=80" alt="Tiago Amaro">
+<div id="quotation">
+  <blockquote>
+    Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
+    <br>
+    <small><cite>Martin Fowler</cite></small>
+  </blockquote>
+</div>
 
-    <blockquote>
-      Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
-      <br>
-      <small><cite>Martin Fowler</cite></small>
-    </blockquote>
-  </div>
+<div id="description">
+  <img src="http://www.gravatar.com/avatar/82bc2f965db7e87993538fa822bbcfac?s=80" alt="Tiago Amaro">
+  Hi, my name is Tiago Amaro and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
+</div>
 
-  <div id="description">
-    Hi, my name is Tiago Amaro and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
-  </div>
-
-  <div id="links">
-    <h2>Where to find me:</h2>
-    <ul>
-      <li>
-        <span>
-          <i class="fa fa-envelope fa-lg"></i>
-          tiagocis at gmail dot com
-        </span>
-      </li>
-      <li>
-        <a href="https://github.com/tiagoamaro">
-          <i class="fa fa-github fa-lg"></i>
-          Github
-        </a>
-      </li>
-      <li>
-        <a href="http://twitter.com/tiagocis">
-          <i class="fa fa-twitter fa-lg"></i>
-          Twitter
-        </a>
-      </li>
-      <li>
-        <a href="http://instagram.com/tiagoamaro">
-          <i class="fa fa-instagram fa-lg"></i>
-          Instagram
-        </a>
-      </li>
-    </ul>
-  </div>
+<div id="links">
+  <h2>Where to find me:</h2>
+  <ul>
+    <li>
+      <span>
+        <i class="fa fa-envelope fa-lg"></i>
+        tiagocis at gmail dot com
+      </span>
+    </li>
+    <li>
+      <i class="fa fa-github fa-lg"></i>
+      <a href="https://github.com/tiagoamaro">Github</a>
+    </li>
+    <li>
+      <i class="fa fa-twitter fa-lg"></i>
+      <a href="http://twitter.com/tiagocis">Twitter</a>
+    </li>
+    <li>
+      <i class="fa fa-instagram fa-lg"></i>
+      <a href="http://instagram.com/tiagoamaro">Instagram</a>
+    </li>
+  </ul>
 </div>
