--- a/instagram.html
+++ b/instagram.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: Instagram
 ---
 
@@ -15,7 +15,4 @@ title: Instagram
     feed.run();
 </script>
 
-<div id="instagram">
-  <h1>Instagram</h1>
-  <div id="instafeed"></div>
-</div>
+<div id="instafeed"></div>
