Updating about page with freelancing information

--- a/about.html
+++ b/about.html
@@ -15,8 +15,21 @@ title: About
   Hi, my name is Tiago Amaro and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
 </div>
 
+<div id="hiring">
+  <h2>Available for hire</h2>
+  <p>It will be a pleasure working with you. Currently, I'm a part-time freelancer available through oDesk and Elance.</p>
+  <ul>
+    <li>
+      <a href="https://www.odesk.com/users/~0167e7bd255029002e">oDesk</a>
+    </li>
+    <li>
+      <a href="https://www.elance.com/s/tiagocis/">Elance</a>
+    </li>
+  </ul>
+</div>
+
 <div id="links">
-  <h2>Where to find me:</h2>
+  <h2>Where to find me</h2>
   <ul>
     <li>
       <span>
