oDesk now is UpWork

--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@ title: About
 
 <div id="hiring">
   <h2>Available for hire</h2>
-  <p>It will be a pleasure working with you. Currently, I'm a part-time freelancer available through oDesk and Elance.</p>
+  <p>It will be a pleasure working with you. Currently, I'm a part-time freelancer available through UpWork and Elance.</p>
   <ul>
     <li>
-      <a href="https://www.odesk.com/users/~0167e7bd255029002e">oDesk</a>
+      <a href="https://www.upwork.com/users/~0167e7bd255029002e">UpWork</a>
     </li>
     <li>
       <a href="https://www.elance.com/s/tiagocis/">Elance</a>
