fix typo on 404

--- a/404.html
+++ b/404.html
@@ -40,12 +40,12 @@
     <a href='/'>Go back</a>
     <span>
       or
-      <a id='barrel-roll' href='javascript:do_a_barrell_roll()'>do a barrel roll</a>
+      <a id='barrel-roll' href='javascript:do_a_barrel_roll()'>do a barrel roll</a>
     </span>
   </h3>
 
   <script type="text/javascript">
-    function do_a_barrell_roll() {
+    function do_a_barrel_roll() {
       var roll = document.getElementById('container')
       roll.className = roll.className + " roll";
     }
