update about page

--- a/about.html
+++ b/about.html
@@ -3,38 +3,45 @@ layout: page
 title: About
 ---
 
-<div id="quotation">
-  <blockquote>
-    Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
-    <br>
-    <small><cite>Martin Fowler</cite></small>
-  </blockquote>
+<div id="description">
+    <p>Hi,</p>
+
+    <p>
+        My name is Tiago, and I'm a brazilian developer living in Rio de Janeiro.
+        Writing better software that people will love is my motto, and I'm always seeking new talents.
+        I'm focused in web technologies and my main programming language is Ruby.
+        Currently, I'm working as a freelancer developer.
+    </p>
 </div>
 
-<div id="description">
-  Hi, my name is Tiago Amaro and I am a brazilian developer living in Rio de Janeiro focused on web technologies. My current  programming language is <span class="ruby">Ruby</span> and my favorite developing environment is SublimeText 3.
+<div id="quotation">
+    <blockquote>
+        Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
+        <br>
+        <small><cite>Martin Fowler</cite></small>
+    </blockquote>
 </div>
 
 <div id="links">
-  <h2>Where to find me</h2>
-  <ul>
-    <li>
-      <span>
+    <h2>Where to find me</h2>
+
+    <div>
         <i class="fa fa-envelope fa-lg"></i>
         tiagocis at gmail dot com
-      </span>
-    </li>
-    <li>
-      <i class="fa fa-github fa-lg"></i>
-      <a href="https://github.com/tiagoamaro">Github</a>
-    </li>
-    <li>
-      <i class="fa fa-twitter fa-lg"></i>
-      <a href="http://twitter.com/tiagocis">Twitter</a>
-    </li>
-    <li>
-      <i class="fa fa-instagram fa-lg"></i>
-      <a href="http://instagram.com/tiagoamaro">Instagram</a>
-    </li>
-  </ul>
+    </div>
+
+    <div>
+        <i class="fa fa-github fa-lg"></i>
+        <a href="https://github.com/tiagoamaro">Github</a>
+    </div>
+
+    <div>
+        <i class="fa fa-twitter fa-lg"></i>
+        <a href="http://twitter.com/tiagocis">Twitter</a>
+    </div>
+
+    <div>
+        <i class="fa fa-instagram fa-lg"></i>
+        <a href="http://instagram.com/tiagoamaro">Instagram</a>
+    </div>
 </div>
