--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,16 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        Felicidade é somente acordar quando os olhos abrem
+        <br>
+        (Happiness is waking up only when your eyes open)
+        <br>
+        <small><cite>Julia Gostkorzewicz</cite></small>
+    </blockquote>
+</div>
+
+<div class="quotation">
+    <blockquote>
         Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
         <br>
         <small><cite>Martin Fowler</cite></small>
