add period to quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,9 +5,9 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
-        Felicidade é somente acordar quando os olhos abrem
+        Felicidade é somente acordar quando os olhos abrem.
         <br>
-        (Happiness is waking up only when your eyes open)
+        (Happiness is waking up only when your eyes open.)
         <br>
         <small><cite>Julia Gostkorzewicz</cite></small>
     </blockquote>
