--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,14 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        Examine and interrogate your motivations, reject the money if you dare, and startup something useful. Curb your ambition. Live happily ever after.
+        <br>
+        <small><cite>David Heinemeier Hansson</cite></small>
+    </blockquote>
+</div>
+
+<div class="quotation">
+    <blockquote>
         Felicidade é somente acordar quando os olhos abrem.
         <br>
         (Happiness is waking up only when your eyes open.)
