--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: About
 
     <div>
         <i class="fa fa-envelope fa-lg"></i>
-        tiagocis at gmail dot com
+        tiagopadrela at gmail dot com
     </div>
 
     <div>
@@ -28,7 +28,7 @@ title: About
 
     <div>
         <i class="fa fa-twitter fa-lg"></i>
-        <a href="http://twitter.com/tiagocis">Twitter</a>
+        <a href="http://twitter.com/tiagopadrela">Twitter</a>
     </div>
 
     <div>
