--- a/instagram.html
+++ b/instagram.html
@@ -5,12 +5,12 @@ title: Instagram
 
 <script type="text/javascript">
     var feed = new Instafeed({
-        get: 'user',
-        userId: 2298453,
         accessToken: '2298453.af447cb.b1080793f4f54648905d3a82b07d4f08',
         clientId: 'af447cbe954244fd8e3a0147d520258c',
-        limit: 60,
-        resolution: 'low_resolution'
+        get: 'user',
+        limit: 25,
+        resolution: 'thumbnail',
+        userId: 2298453,
     });
     feed.run();
 </script>
