--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@ layout: default
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.next_page %}
-    <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
+    <a href="{{ paginator.next_page_path }}" class="pagination-item">Older</a>
   {% else %}
-    <span class="pagination-item older">Older</span>
+    <span class="pagination-item">Older</span>
   {% endif %}
+
   {% if paginator.previous_page %}
-    {% if paginator.page == 2 %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
-    {% else %}
-      <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}">Newer</a>
-    {% endif %}
+    <a href="{{ paginator.previous_page_path }}" class="pagination-item">Newer</a>
   {% else %}
-    <span class="pagination-item newer">Newer</span>
+    <span class="pagination-item">Newer</span>
   {% endif %}
 </div>
