add Mike Perham quote:
No code runs faster than no code.
No code has fewer bugs than no code.
No code uses less memory than no code.
No code is easier to understand than no code.

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,16 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        No code runs faster than no code. <br/>
+        No code has fewer bugs than no code. <br/>
+        No code uses less memory than no code. <br/>
+        No code is easier to understand than no code. <br/>
+        <small><cite>Mike Perham</cite></small>
+    </blockquote>
+</div>
+
+<div class="quotation">
+    <blockquote>
         Beautiful is better than ugly.<br/>
         Explicit is better than implicit.<br/>
         Simple is better than complex.<br/>
@@ -27,7 +37,6 @@ title: Quotes
         <small><cite>The Zen of Python, by Tim Peters</cite></small>
     </blockquote>
 </div>
-
 
 <div class="quotation">
     <blockquote>
