add hrs to separate quotes.

--- a/quotes.html
+++ b/quotes.html
@@ -5,38 +5,42 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
-        No code runs faster than no code. <br/>
-        No code has fewer bugs than no code. <br/>
-        No code uses less memory than no code. <br/>
-        No code is easier to understand than no code. <br/>
+        No code runs faster than no code. <br>
+        No code has fewer bugs than no code. <br>
+        No code uses less memory than no code. <br>
+        No code is easier to understand than no code. <br>
         <small><cite>Mike Perham</cite></small>
     </blockquote>
 </div>
 
+<hr>
+
 <div class="quotation">
     <blockquote>
-        Beautiful is better than ugly.<br/>
-        Explicit is better than implicit.<br/>
-        Simple is better than complex.<br/>
-        Complex is better than complicated.<br/>
-        Flat is better than nested.<br/>
-        Sparse is better than dense.<br/>
-        Readability counts.<br/>
-        Special cases aren't special enough to break the rules.<br/>
-        Although practicality beats purity.<br/>
-        Errors should never pass silently.<br/>
-        Unless explicitly silenced.<br/>
-        In the face of ambiguity, refuse the temptation to guess.<br/>
-        There should be one-- and preferably only one --obvious way to do it.<br/>
-        Although that way may not be obvious at first unless you're Dutch.<br/>
-        Now is better than never.<br/>
-        Although never is often better than *right* now.<br/>
-        If the implementation is hard to explain, it's a bad idea.<br/>
-        If the implementation is easy to explain, it may be a good idea.<br/>
-        Namespaces are one honking great idea -- let's do more of those!<br/>
+        Beautiful is better than ugly.<br>
+        Explicit is better than implicit.<br>
+        Simple is better than complex.<br>
+        Complex is better than complicated.<br>
+        Flat is better than nested.<br>
+        Sparse is better than dense.<br>
+        Readability counts.<br>
+        Special cases aren't special enough to break the rules.<br>
+        Although practicality beats purity.<br>
+        Errors should never pass silently.<br>
+        Unless explicitly silenced.<br>
+        In the face of ambiguity, refuse the temptation to guess.<br>
+        There should be one-- and preferably only one --obvious way to do it.<br>
+        Although that way may not be obvious at first unless you're Dutch.<br>
+        Now is better than never.<br>
+        Although never is often better than *right* now.<br>
+        If the implementation is hard to explain, it's a bad idea.<br>
+        If the implementation is easy to explain, it may be a good idea.<br>
+        Namespaces are one honking great idea -- let's do more of those!<br>
         <small><cite>The Zen of Python, by Tim Peters</cite></small>
     </blockquote>
 </div>
+
+<hr>
 
 <div class="quotation">
     <blockquote>
@@ -45,6 +49,8 @@ title: Quotes
         <small><cite>David Heinemeier Hansson</cite></small>
     </blockquote>
 </div>
+
+<hr>
 
 <div class="quotation">
     <blockquote>
@@ -56,6 +62,8 @@ title: Quotes
     </blockquote>
 </div>
 
+<hr>
+
 <div class="quotation">
     <blockquote>
         Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
@@ -63,6 +71,8 @@ title: Quotes
         <small><cite>Martin Fowler</cite></small>
     </blockquote>
 </div>
+
+<hr>
 
 <div class="quotation">
     <blockquote>
@@ -72,6 +82,8 @@ title: Quotes
     </blockquote>
 </div>
 
+<hr>
+
 <div class="quotation">
     <blockquote>
         If we accept that we reflect values into code whether we want or not, we can't look into the monitor. We have to look into the mirror. If we can be mindful of the values we reflect into our code; if we can approach our craft with humility and an understanding of our limitations; if we can admit that cleverness is no substitute for compassion; if we can acknowledge that we always have a perspective and it is only one of many perspectives; if we can embrace ambiguity; if we can view our designs as a conversation rather than a declaration; if we can bring these human values to our code, we stand a chance of bringing soul to software.
@@ -79,4 +91,3 @@ title: Quotes
         <small><cite>Avdi Grimm, The Soul of Software</cite></small>
     </blockquote>
 </div>
-
