--- a/twitter.html
+++ b/twitter.html
@@ -2,8 +2,12 @@
 layout: page
 title: Twitter
 ---
-
 <div id="twitter-timeline">
-  <a class="twitter-timeline" href="https://twitter.com/tiagopadrela" data-tweet-limit="20" data-widget-id="347891026909863938">Tweets from @tiagopadrela</a>
-  <script>/*<![CDATA[*/!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");/*]]>*/</script>
+<a class="twitter-timeline" href="https://twitter.com/tiagopadrela" data-tweet-limit="20" data-widget-id="347891026909863938">
+      Tweets from @tiagopadrela
+  </a>
 </div>
+
+<script type="text/javascript">
+    /*<![CDATA[*/!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");/*]]>*/
+</script>
