use npmcdn to load external JS

--- a/instagram.html
+++ b/instagram.html
@@ -3,6 +3,8 @@ layout: page
 title: Instagram
 ---
 
+<script src="https://npmcdn.com/instafeed.js@1.4.1/instafeed.min.js"/></script>
+
 <script type="text/javascript">
     var feed = new Instafeed({
         accessToken: '2298453.af447cb.b1080793f4f54648905d3a82b07d4f08',
@@ -16,3 +18,4 @@ title: Instagram
 </script>
 
 <div id="instafeed"></div>
+
