use CDNized bootstrap

--- a/about.html
+++ b/about.html
@@ -17,22 +17,22 @@ title: About
     <h2>Where to find me</h2>
 
     <div>
-        <i class="icon-envelope"></i>
+        <i class="fa fa-envelope"></i>
         tiagopadrela at gmail dot com
     </div>
 
     <div>
-        <i class="icon-github"></i>
+        <i class="fa fa-github"></i>
         <a href="https://github.com/tiagoamaro">Github</a>
     </div>
 
     <div>
-        <i class="icon-twitter"></i>
+        <i class="fa fa-twitter"></i>
         <a href="http://twitter.com/tiagopadrela">Twitter</a>
     </div>
 
     <div>
-        <i class="icon-instagram"></i>
+        <i class="fa fa-instagram"></i>
         <a href="http://instagram.com/tiagoamaro">Instagram</a>
     </div>
 </div>
