master Yoda quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,18 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        Fear is the path to the dark side. <br>
+        Fear leads to anger. <br>
+        Anger leads to hate. <br>
+        Hate leads to suffering. <br>
+        <small><cite>Master Yoda - Star Wars Universe</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quotation">
+    <blockquote>
         No code runs faster than no code. <br>
         No code has fewer bugs than no code. <br>
         No code uses less memory than no code. <br>
