add Sam Hatoum quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,16 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        Bugs are like water leaks. If you leave them too long, they can spoil your merchandise and slow down your business.
+        <br>
+        <small><cite>Sam Hatoum</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quotation">
+    <blockquote>
         Fear is the path to the dark side. <br>
         Fear leads to anger. <br>
         Anger leads to hate. <br>
