add Jordan Peterson’s quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,19 @@ title: Quotes
 
 <div class="quotation">
     <blockquote>
+        Don't write things you don't believe. <br>
+        And write them carefully. <br>
+        And write them knowing that, you're not to write them unless you're willing to stand behind them. <br>
+        Then understand that if you're called to stand behind them, <br>
+        That is in fact how you will become educated. <br>
+        <small><cite>Jordan Peterson</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quotation">
+    <blockquote>
         Bugs are like water leaks. If you leave them too long, they can spoil your merchandise and slow down your business.
         <br>
         <small><cite>Sam Hatoum</cite></small>
