add new Avdi quote

--- a/quotes.html
+++ b/quotes.html
@@ -3,7 +3,18 @@ layout: page
 title: Quotes
 ---
 
-<div class="quotation">
+<div class="quote">
+    <blockquote>
+        The quality of our mental models determines whether the code we write does what we expect it to do. <br>
+        And that translates directly into avoiding bugs and meeting deadlines. <br>
+        The more effective our models, the more work we're able to get done. <br>
+        <small><cite>Avdi Grimm</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quote">
     <blockquote>
         Don't write things you don't believe. <br>
         And write them carefully. <br>
@@ -16,7 +27,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Bugs are like water leaks. If you leave them too long, they can spoil your merchandise and slow down your business.
         <br>
@@ -26,7 +37,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Fear is the path to the dark side. <br>
         Fear leads to anger. <br>
@@ -38,7 +49,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         No code runs faster than no code. <br>
         No code has fewer bugs than no code. <br>
@@ -50,7 +61,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Beautiful is better than ugly.<br>
         Explicit is better than implicit.<br>
@@ -77,7 +88,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Examine and interrogate your motivations, reject the money if you dare, and startup something useful. Curb your ambition. Live happily ever after.
         <br>
@@ -87,7 +98,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Felicidade é somente acordar quando os olhos abrem.
         <br>
@@ -99,7 +110,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Any fool can write code that a computer can understand. Good programmers write code that humans can understand.
         <br>
@@ -109,7 +120,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         Building an object-oriented application means inventing appropriate machinery. We represent real-world information, processes, interactions, relationships, even errors, by inventing objects that don't exist in the real world. We give life and intelligence to inanimate things. We take difficult-to-comprehend real-world objects and split them into simpler, more manageable software ones. We invent new objects. Each has a specific role to play in the application. Our measure of success lies in how clearly we invent a software reality that satisfies our application's requirements -- and not in how closely it remembers the real world.
         <br>
@@ -119,7 +130,7 @@ title: Quotes
 
 <hr>
 
-<div class="quotation">
+<div class="quote">
     <blockquote>
         If we accept that we reflect values into code whether we want or not, we can't look into the monitor. We have to look into the mirror. If we can be mindful of the values we reflect into our code; if we can approach our craft with humility and an understanding of our limitations; if we can admit that cleverness is no substitute for compassion; if we can acknowledge that we always have a perspective and it is only one of many perspectives; if we can embrace ambiguity; if we can view our designs as a conversation rather than a declaration; if we can bring these human values to our code, we stand a chance of bringing soul to software.
         <br>
