add thinkertoys quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,18 @@ title: Quotes
 
 <div class="quote">
     <blockquote>
+        You can catch a monkey by burying a narrow-mouthed jar of nuts in the ground. <br>
+        A monkey comes along, pits his paw into the jar and grabs a handful of nuts, but the mouth of the jar is too narrow to let him withdraw his clenched fist. <br>
+        The monkey is unwilling to let go of the nuts and so is trapped. <br>
+        You too can be trapped by not letting go of your beliefs, opinions, worries and anxieties. <br>
+        <small><cite>Michael Michalko - Thinkertoys</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quote">
+    <blockquote>
         The quality of our mental models determines whether the code we write does what we expect it to do. <br>
         And that translates directly into avoiding bugs and meeting deadlines. <br>
         The more effective our models, the more work we're able to get done. <br>
