add bernard de chartres quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,18 @@ title: Quotes
 
 <div class="quote">
     <blockquote>
+        Nous sommes des nains juchés sur les épaules de géants. <br>
+        Nous voyons ainsi davantage et plus loin qu'eux, non parce que notre vue est plus aiguë ou notre taille plus haute, mais parce qu'ils nous portent en l'air et nous élèvent de toute leur hauteur gigantesque. <br>
+
+        (We are dwarfs perched on the shoulders of giants, <br> so we see more and more than they do, not because our sight is sharper or our height higher, but because they carry us up and we raise their gigantic height) <br>
+        <small><cite>Bernard de Chartres</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quote">
+    <blockquote>
         You can catch a monkey by burying a narrow-mouthed jar of nuts in the ground. <br>
         A monkey comes along, pits his paw into the jar and grabs a handful of nuts, but the mouth of the jar is too narrow to let him withdraw his clenched fist. <br>
         The monkey is unwilling to let go of the nuts and so is trapped. <br>
