--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,19 @@ title: Quotes
 
 <div class="quote">
     <blockquote>
+        You can do a lot in a lifetime<br>
+        If you don’t burn out too fast<br>
+        You can make the most of the distance<br>
+        First you need endurance —<br>
+        First you’ve got to last…<br>
+        <small><cite>Neil Peart (Marathon - Rush)</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quote">
+    <blockquote>
         Nous sommes des nains juchés sur les épaules de géants. <br>
         Nous voyons ainsi davantage et plus loin qu'eux, non parce que notre vue est plus aiguë ou notre taille plus haute, mais parce qu'ils nous portent en l'air et nous élèvent de toute leur hauteur gigantesque. <br>
 
