--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,17 @@ title: Quotes
 
 <div class="quote">
     <blockquote>
+        The mark of a person who is in control of consciousness is the ability to focus attention at will,<br>
+        to be oblivious to distractions, to concentrate for as long as it takes to achieve a goal, and not longer.<br>
+        And the person who can do this usually enjoys the normal course of everyday life.<br>
+        <small><cite>Mihaly Csikszentmihalyi, Flow</cite></small>
+    </blockquote>
+</div>
+
+<hr>
+
+<div class="quote">
+    <blockquote>
         You can do a lot in a lifetime<br>
         If you don’t burn out too fast<br>
         You can make the most of the distance<br>
