--- a/twitter.html
+++ b/twitter.html
@@ -3,12 +3,10 @@ layout: page
 title: Twitter
 ---
 
-<div id="twitter-timeline">
-<a class="twitter-timeline" href="https://twitter.com/tiagopadrela" data-tweet-limit="20" data-widget-id="347891026909863938">
-      Tweets from @tiagopadrela
+<div class="twitter-timeline-container">
+  <a class="twitter-timeline" href="https://twitter.com/tiagopadrela?ref_src=twsrc%5Etfw" data-width="1000">
+    Tweets by tiagopadrela
   </a>
 </div>
 
-<script type="text/javascript">
-    /*<![CDATA[*/!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");/*]]>*/
-</script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
