Mention The Conversation on about page

--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@ title: About
         Writing better software that people will love is my motto, and I'm always seeking new talents.
         I'm focused in web technologies and my main programming language is Ruby.
     </p>
+
+    <p>I am currently a developer for <a href="https://theconversation.com/au/team#platform">The Conversation</a>.</p>
 </div>
 
 <div id="links">
