--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
     <p>Hi,</p>
 
     <p>
-        My name is Tiago, and I'm a brazilian developer living in Rio de Janeiro.
+        My name is Tiago, and I'm a brazilian developer living in São Paulo.
         Writing better software that people will love is my motto, and I'm always seeking new talents.
         I'm focused in web technologies and my main programming language is Ruby.
     </p>
