Add Mastodon's ruby.social timeline at the homepage
Mastodon will be used on higher priority than Twitter.

We're using the https://gitlab.com/idotj/mastodon-embed-feed-timeline
project to display Mastodon's timeline.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 layout: default
 ---
 
+<h2>Mastodon</h2>
+
+<div id="mt-timeline" class="mt-timeline">
+  <div id="mt-body" class="mt-body">
+      <div class="loading-spinner"></div>
+  </div>
+</div>
+
+<h2>Twitter</h2>
+
 <div class="twitter-timeline-container">
   <a class="twitter-timeline" href="https://twitter.com/tiagopadrela?ref_src=twsrc%5Etfw" data-width="1000">
     Tweets by tiagopadrela
