--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ title: About
 
     <ul>
         <li>Email: tiagopadrela at gmail dot com</li>
-        <li><a href="https://ruby.social/@tiagopadrela">Mastodon</a></li>
+        <li><a href="https://ruby.social/@tiagopadrela" rel="me">Mastodon</a></li>
         <li><a href="https://github.com/tiagoamaro">Github</a></li>
         <li><a href="http://twitter.com/tiagopadrela">Twitter</a></li>
     </ul>
