Create the Twitter archive page
I am no longer planning to post on Twitter, so I've decided to create
a plain text backup archive in this repo.

--- a/posts.html
+++ b/posts.html
@@ -3,6 +3,16 @@ layout: page
 title: Posts
 ---
 
+<hr>
+
+<ul>
+    <li>
+        <a href="/twitter-archive">Twitter archive</a>
+    </li>
+</ul>
+
+<hr>
+
 <ul class="posts">
     {% for post in site.posts %}
     <li>
