Add Irving Chernev quote

--- a/quotes.html
+++ b/quotes.html
@@ -5,6 +5,13 @@ title: Quotes
 
 <div class="quote">
     <blockquote>
+        In chess, as in life, rules must often be swept aside.<br>
+        <small><cite>Irving Chernev</cite></small>
+    </blockquote>
+</div>
+
+<div class="quote">
+    <blockquote>
         The mark of a person who is in control of consciousness is the ability to focus attention at will,<br>
         to be oblivious to distractions, to concentrate for as long as it takes to achieve a goal, and not longer.<br>
         And the person who can do this usually enjoys the normal course of everyday life.<br>
